# FoundryGate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASES.md  SECURITY.md  config.yaml  foundrygate.service  openclaw-integration.jsonc  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md  dependabot.yml  pull_request_template.md
Formula/: faigate.rb  foundrygate.rb
docs/: ADAPTIVE-ORCHESTRATION.md  AI-NATIVE-MATRIX.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  FAIGATE-ROADMAP.md  FOUNDRYGATE-ROADMAP.md  INTEGRATIONS.md  ONBOARDING.md  OPERATIONS.md  PUBLISHING.md  TROUBLESHOOTING.md  WORKSTATIONS.md
faigate/: __init__.py  adaptation.py  config.py  dashboard.py  lane_registry.py  main.py  provider_catalog.py  providers.py  router.py  wizard.py
foundrygate/: __init__.py  __main__.py  cli.py  config.py  hooks.py  main.py  metrics.py  onboarding.py  provider_catalog.py  providers.py  registry.py  router.py  updates.py  wizard.py
scripts/: faigate-api-keys  faigate-client-integrations  faigate-client-scenarios  faigate-config-overview  faigate-config-wizard  faigate-dashboard  faigate-doctor  faigate-install  faigate-menu  faigate-onboarding-report  faigate-onboarding-validate  faigate-provider-discovery  faigate-provider-setup  faigate-routing-settings  faigate-server-settings  faigate-ui-lib.sh  faigate-uninstall  foundrygate-auto-update  foundrygate-bootstrap  foundrygate-config-wizard  foundrygate-doctor  foundrygate-health  foundrygate-install  foundrygate-logs  foundrygate-onboarding-report  foundrygate-onboarding-validate  foundrygate-restart  foundrygate-start  foundrygate-status  foundrygate-stop  foundrygate-uninstall  foundrygate-update  foundrygate-update-check
tests/: test_adaptation.py  test_api_hardening.py  test_capabilities.py  (+14 more)
(+32 files in other folders)
